--- a/pom.xml
+++ b/pom.xml
@@ -208,6 +208,18 @@
       <version>${activiti-build.version}</version>
       <type>pom</type>
     </dependency>
+    <dependency>
+      <groupId>org.activiti.api</groupId>
+      <artifactId>activiti-api-dependencies</artifactId>
+      <version>${activiti-api.version}</version>
+      <type>pom</type>
+    </dependency>
+    <dependency>
+      <groupId>org.activiti.core.common</groupId>
+      <artifactId>activiti-core-common-dependencies</artifactId>
+      <version>${activiti-core-common.version}</version>
+      <type>pom</type>
+    </dependency>
   </dependencies>
   
   <modules>
