--- a/activiti-spring-process-extensions/pom.xml
+++ b/activiti-spring-process-extensions/pom.xml
@@ -58,5 +58,9 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+      <dependency>
+        <groupId>org.activiti</groupId>
+        <artifactId>activiti-spring-resource-loader</artifactId>
+      </dependency>
     </dependencies>
 </project>
