--- a/.updatebot.yml
+++ b/.updatebot.yml
@@ -19,4 +19,7 @@ github:
     - name: activiti-cloud-org-service
       branch: develop
       useSinglePullRequest: true
+    - name: activiti-cloud-full-chart
+      branch: develop
+      useSinglePullRequest: true
       
