--- a/activiti-api-impl/activiti-api-task-runtime-impl/pom.xml
+++ b/activiti-api-impl/activiti-api-task-runtime-impl/pom.xml
@@ -63,6 +63,11 @@
             <artifactId>activiti-engine</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
