--- a/activiti-spring-conformance-tests/activiti-spring-conformance-util/pom.xml
+++ b/activiti-spring-conformance-tests/activiti-spring-conformance-util/pom.xml
@@ -56,6 +56,10 @@
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
