--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 
     <checkstyle-maven-plugin.version>3.1.0</checkstyle-maven-plugin.version>
     <skipCheckstyle>true</skipCheckstyle>
+    <testcontainers.version>1.12.1</testcontainers.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -250,6 +251,7 @@
     <module>activiti-json-converter</module>
     <module>activiti-engine</module>
     <module>activiti-spring</module>
+    <module>activiti-spring-resource-loader</module>
     <module>activiti-spring-boot-starter</module>
     <module>activiti-spring-app-process</module>
     <module>activiti-spring-process-extensions</module>
