--- a/activiti-spring-process-extensions/pom.xml
+++ b/activiti-spring-process-extensions/pom.xml
@@ -28,6 +28,10 @@
             <groupId>org.activiti.core.common</groupId>
             <artifactId>activiti-connector-model</artifactId>
         </dependency>
+    	<dependency>
+     		<groupId>org.activiti.core.common</groupId>
+      		<artifactId>activiti-common-util</artifactId>
+    	</dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
