--- a/activiti-core-common/activiti-core-test/activiti-core-test-local-runtime/pom.xml
+++ b/activiti-core-common/activiti-core-test/activiti-core-test-local-runtime/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-core-test</artifactId>
-    <version>7.1.0-SNAPSHOT</version>
+    <version>7.1.224</version>
   </parent>
   <artifactId>activiti-core-test-local-runtime</artifactId>
   <name>Activiti :: Test Local Runtime</name>
