--- a/activiti-core/activiti-api-impl/pom.xml
+++ b/activiti-core/activiti-api-impl/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-core-dependencies</artifactId>
-    <version>7.1.0-SNAPSHOT</version>
+    <version>7.1.224</version>
     <relativePath>../activiti-core-dependencies</relativePath>
   </parent>
   <artifactId>activiti-api-impl</artifactId>
