--- a/activiti-examples/activiti-api-basic-connector-example/pom.xml
+++ b/activiti-examples/activiti-api-basic-connector-example/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-examples</artifactId>
-    <version>7.1.0-SNAPSHOT</version>
+    <version>7.1.224</version>
   </parent>
   <artifactId>activiti-api-basic-connector-example</artifactId>
   <name>Activiti :: Examples :: API Basic Connector Example</name>
