--- a/activiti-core/activiti-api-impl/activiti-api-process-model-impl/pom.xml
+++ b/activiti-core/activiti-api-impl/activiti-api-process-model-impl/pom.xml
@@ -43,5 +43,10 @@
       <artifactId>spring-boot-autoconfigure</artifactId>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
