--- a/activiti-core/activiti-api-impl/activiti-api-process-model-impl/pom.xml
+++ b/activiti-core/activiti-api-impl/activiti-api-process-model-impl/pom.xml
@@ -53,5 +53,10 @@
       <artifactId>junit-jupiter-engine</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <scope>test</scope>
+    </dependency>    
   </dependencies>
 </project>
